<resources>
    <string name="app_name">GorillaCars</string>
    <string name="back">Назад</string>
    <string name="add_description">Добавить описание</string>
    <string name="item_details">Car Details</string>
    <string name="clicked_item">Selected: %1$s</string>
    <string name="return_to_main">Returning to MainActivity</string>
    <string name="lifecycle_main_create">MainActivity: onCreate</string>
    <string name="lifecycle_main_start">MainActivity: onStart</string>
    <string name="lifecycle_main_resume">MainActivity: onResume</string>
    <string name="lifecycle_main_pause">MainActivity: onPause</string>
    <string name="lifecycle_main_stop">MainActivity: onStop</string>
    <string name="lifecycle_main_destroy">MainActivity: onDestroy</string>
    <string name="add_description_clicked">Description button clicked for %1$s</string>
    <string name="lifecycle_main_restart">MainActivity: onRestart</string>
    <string name="lifecycle_detail_create">CarDetailActivity: onCreate</string>
    <string name="lifecycle_detail_start">CarDetailActivity: onStart</string>
    <string name="lifecycle_detail_resume">CarDetailActivity: onResume</string>
    <string name="lifecycle_detail_pause">CarDetailActivity: onPause</string>
    <string name="lifecycle_detail_stop">CarDetailActivity: onStop</string>
    <string name="lifecycle_detail_destroy">CarDetailActivity: onDestroy</string>
    <string name="lifecycle_detail_restart">CarDetailActivity: onRestart</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="price">25.000</string>
    <string name="user">Пользователь</string>
    <string name="pwd">Пароль</string>
    <string name="IAdmin">Я админ</string>
    <string name="login">Войти</string>
    <string name="mbregister">Нет аккаунта? Регистрация</string>
    <string name="logName">Логин</string>
    <string name="defCar">Tayota Camry</string>
    <string name="exit">Выйти</string>
    <string name="favorite">Избранное</string>
    <string name="addCar">Добавить машину</string>
    <string name="call">Связаться</string>
    <string name="carDesk">Описание машины</string>
    <string name="defYearCar">Год выпуска: 2023</string>
    <string name="defTypeCar"> Тип кузова: Седан</string>
    <string name="changeDesk"> Изменить описание</string>
    <string name="toFavorite"> В избранное</string>
    <string name="fio"> ФИО владельца: </string>
    <string name="telegram"> Telegram: </string>
    <string name="phone"> Телефон: </string>
    <string name="email"> Email: </string>
    <string name="no_description">Описание отсутствует</string>
    <string name="car_year">Год выпуска: %1$d</string>
    <string name="car_body">Тип кузова: %1$s</string>
    <string name="edit_only_admin">Только админ может менять описание</string>
    <string name="desc_updated">Описание обновлено</string>
    <string name="desc_not_changed">Описание не изменилось</string>
    <string name="desc_hint">Введите новое описание</string>
    <string name="desc_edit_title">Изменить описание</string>
    <string name="add_to_favorites">В избранное</string>
    <string name="remove_from_favorites">Из избранного</string>
    <string name="added_to_favorites">Добавлено в избранное</string>
    <string name="removed_from_favorites">Удалено из избранного</string>
    <string name="auth_error">Ошибка авторизации</string>
    <string name="call_owner">Позвонить</string>





</resources>