<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <ImageView
        android:id="@+id/carImage"
        android:layout_width="0dp"
        android:layout_height="152dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/carName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/defCar"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/carImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/carPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/carName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:minWidth="200dp"
        android:padding="12dp"
        android:text="@string/call"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/carDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/carDesk"
        android:background="@android:drawable/edit_text"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="@color/grey"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:inputType="textMultiLine|textCapSentences"
        app:layout_constraintTop_toBottomOf="@+id/carPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/specsCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/carDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/carYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defYearCar"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/carBodyType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defTypeCar"
                android:textSize="16sp"
                android:textColor="@color/black" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editDescButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeDesk"
        app:cornerRadius="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/specsCard"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toFavorite"
        app:cornerRadius="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/specsCard"
        app:layout_constraintStart_toEndOf="@id/editDescButton"
        android:layout_marginStart="12dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="288dp"
        android:text="@string/back"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specsCard" />

</androidx.constraintlayout.widget.ConstraintLayout>
